Salesforce/main/default/objects/Integration_Log__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>