Salesforce/main/default/objects/Integration_Log__c/fields/documentId__c.field-meta.xml
<CustomField>
    <fullName>documentId__c</fullName>
    <label>documentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>