Salesforce/main/default/objects/Integration_Log__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>Service Url Location</description>
    <inlineHelpText>Service Url Location</inlineHelpText>
    <label>EndPoint</label>
    <type>Url</type>
</CustomField>