Salesforce/main/default/objects/Integration_Log__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InsertError</fullName>
            </value>
            <value>
                <fullName>UpdateError</fullName>
            </value>
            <value>
                <fullName>UpsertError</fullName>
            </value>
            <value>
                <fullName>ParserError</fullName>
            </value>
            <value>
                <fullName>ServiceError</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>